--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,7 @@
     "express": "4.18.2",
     "jsonwebtoken": "9.0.0",
     "multer": "1.4.5-lts.1",
-    "pg": "8.10.0",
+    "sqlite3": "^5.1.6",
     "uuid": "9.0.0"
   },
   "devDependencies": {
@@ -34,7 +34,7 @@
     "@types/jsonwebtoken": "^9.0.0",
     "@types/multer": "1.4.7",
     "@types/node": "20.3.1",
-    "@types/pg": "^8.16.0",
+    "@types/sqlite3": "^3.1.8",
     "@types/uuid": "^10.0.0",
     "ts-node": "10.9.1",
     "typescript": "5.1.3"
